--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "apisauce": "^0.3.0",
     "format-json": "^1.0.3",
+    "native-base": "^0.5.4",
     "querystringify": "0.0.3",
     "ramda": "^0.22.0",
     "react": "~15.2.1",
